[package]
name = "dev"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scuttle = { git = "https://github.com/Zolmok/scuttle", tag="v0.4.0" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
